--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Wess Soft Project</title>
+        <title>API Platform - GraphQL project</title>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="/assets/js/app.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
             <div class="container">
-                <a href="../" class="navbar-brand">Wess Soft Project</a>
+                <a href="../" class="navbar-brand">API Platform - GraphQL project</a>
             </div>
         </div>
         <main class="container mt-5 pt-3">
-            <h1 class="fw-bold text-primary">Wess Soft Project</h1>
+            <h1 class="fw-bold text-primary">API Platform - GraphQL project</h1>
             <h2>Les posts</h2>
             <div class="post-container d-flex flex-wrap justify-content-between">
             </div>
@@ -24,17 +25,40 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                        <h5 class="modal-title" id="exampleModalLabel">Envoyer un report</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        ...
+                        <form>
+                            <input type="hidden" class="post">
+                            <div class="row">
+                                <input type="text" class="form-control reason" placeholder="Raison du report">
+                            </div>
+                        </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                            <i class="bi bi-x-circle"></i>
+                            Fermer
+                        </button>
+                        <button type="button" class="btn btn-primary report">
+                            <i class="bi bi-send"></i>
+                            Reporter
+                        </button>
                     </div>
                     </div>
+                </div>
+            </div>
+
+            <!-- Toast -->
+            <div class="toast success" role="alert" aria-live="assertive" aria-atomic="true" style="position:absolute;top:60px;right:60px;">
+                <div class="toast-header">
+                    <strong class="me-auto">API Platform - GraphQL project</strong>
+                    <small>Now</small>
+                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
+                <div class="toast-body">
+                    Votre report a bien été envoyé !
                 </div>
             </div>
         </main>
